log
Wed, Mar 26, 2025  9:03:34 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  9:04:24 AM: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
147b81d
Wed, Mar 26, 2025  9:05:46 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b8b1db2
Wed, Mar 26, 2025  9:07:47 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d711348
Wed, Mar 26, 2025  9:09:45 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f59da12
Wed, Mar 26, 2025  9:11:03 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6a29007
Wed, Mar 26, 2025  9:12:16 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:29: error: 'List {aka struct List}' has no member named 'next'
     if (list == NULL || list->next == NULL) return NULL;
                             ^~
list.c:50:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
7298a12
Wed, Mar 26, 2025  9:13:23 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f338239
Wed, Mar 26, 2025  9:14:32 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
106d48c
Wed, Mar 26, 2025  9:24:19 AM: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
495845a
Wed, Mar 26, 2025  9:25:28 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
24d38b1
Wed, Mar 26, 2025  9:32:20 AM: 
 list.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:67:5: error: expected ';' before 'return'
     return list->current->data;
     ^~~~~~
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d9144f5
Wed, Mar 26, 2025  9:34:01 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5151997
Wed, Mar 26, 2025  9:35:23 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
5f79b35
Wed, Mar 26, 2025  9:39:53 AM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
d49a9db
Wed, Mar 26, 2025  9:43:30 AM: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
203eb33
